--- a/nginx/etc/nginx/nginx.conf
+++ b/nginx/etc/nginx/nginx.conf
@@ -28,7 +28,7 @@ http {
             proxy_set_header   X-Forwarded-Proto    $scheme;
         }
 
-        location /ws/ {
+        location /mqtt {
             proxy_pass http://mqtt:9002;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
