--- a/mqtt/etc/mosquitto/mosquitto.conf
+++ b/mqtt/etc/mosquitto/mosquitto.conf
@@ -8,7 +8,7 @@ persistence_location /var/mosquitto/
 connection_messages true
 log_timestamp true
 
-log_dest syslog
+log_dest stderr
 
 #acl_file /etc/mosquitto/jp.acl
 #password_file /etc/mosquitto/jp.pw
