Allow push to mosquitto from outside docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,12 @@ services:
       - mqtt
 
   # Mosquitto
+  # For testing outside
   mqtt:
     build: ./mqtt
     command: mosquitto -c /etc/mosquitto/mosquitto.conf
-
+    ports:
+      - 11883:1883  # mosquito_pub -h localhost -p 11883
   webapp:
     build: ./webapp
     volumes:
