--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 
 services:
   nginx:
-    build: ./nginx
+    build: ../services/nginx
     ports:
       - "8081:80"
     links:
@@ -12,13 +12,13 @@ services:
   # Mosquitto
   # For testing outside
   mqtt:
-    build: ./mqtt
+    build: ../services/mqtt
     command: mosquitto -c /etc/mosquitto/mosquitto.conf
     ports:
       - 11883:1883  # mosquito_pub -h localhost -p 11883
   webapp:
-    build: ./webapp
+    build: ../services/webapp
     volumes:
-      - './webapp/src:/home/webapp/src'
+      - '../webapp/src:/home/webapp/src'
     #command: python -m SimpleHTTPServer
     command: "venv/bin/python src/main.py"
