--- a/services/mqtt/etc/mosquitto/mosquitto.conf
+++ b/services/mqtt/etc/mosquitto/mosquitto.conf
@@ -3,7 +3,6 @@
 # Config file for mosquitto
 retry_interval 20
 sys_interval 10
-store_clean_interval 10
 user mosquitto
 max_inflight_messages 40
 max_queued_messages 200
@@ -12,6 +11,7 @@ message_size_limit 0
 allow_zero_length_clientid true
 persistent_client_expiration 3m
 allow_duplicate_messages false
+
 autosave_interval 60
 autosave_on_changes false
 persistence true
@@ -23,32 +23,15 @@ connection_messages true
 log_timestamp true
 include_dir /etc/mosquitto.d/
 
-listener 1883
 
-listener 9883
-protocol websockets
-
-# Configuración original
 autosave_interval 1800
-persistence true
-persistence_file m2.db
-persistence_location /var/mosquitto/
 connection_messages true
 log_timestamp true
 
 log_dest stderr
 
-#acl_file /etc/mosquitto/jp.acl
-#password_file /etc/mosquitto/jp.pw
-
-listener 1883
+# listener 1883
 
 listener 9001 127.0.0.1
 protocol websockets
 
-listener 9002 127.0.0.1
-protocol websockets
-
-#cafile /etc/mosquitto/tls/ca.crt
-#certfile /etc/mosquitto/tls/tiggr.ww.mens.de.crt
-#keyfile /etc/mosquitto/tls/tiggr.ww.mens.de.key
