--- a/services/mqtt/etc/mosquitto/mosquitto.conf
+++ b/services/mqtt/etc/mosquitto/mosquitto.conf
@@ -4,34 +4,39 @@
 retry_interval 20
 sys_interval 10
 user mosquitto
-max_inflight_messages 40
-max_queued_messages 200
-queue_qos0_messages false
-message_size_limit 0
-allow_zero_length_clientid true
-persistent_client_expiration 3m
-allow_duplicate_messages false
 
-autosave_interval 60
-autosave_on_changes false
-persistence true
 persistence_file mosquitto.db
 persistence_location /var/lib/mosquitto/
 log_dest stderr
 log_type all
+
 connection_messages true
 log_timestamp true
 include_dir /etc/mosquitto.d/
-
 
 autosave_interval 1800
 connection_messages true
 log_timestamp true
 
-log_dest stderr
+listener 1883
 
-# listener 1883
-
-listener 9001 127.0.0.1
+listener 9001 
 protocol websockets
 
+
+
+auth_plugin /usr/local/lib/auth-plug.so
+
+auth_opt_backends http
+auth_opt_superusers admin
+
+
+auth_opt_http_ip webapp
+# Le pega al flask
+auth_opt_http_port 8000
+auth_opt_http_getuser_uri /auth
+auth_opt_http_superuser_uri /superuser
+auth_opt_http_aclcheck_uri /acl
+auth_opt_http_getuser_params domain=DOMAIN,port=PORT
+auth_opt_http_superuser_params domain=DOMAIN,port=PORT
+auth_opt_http_aclcheck_params domain=DOMAIN,port=PORT
